[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
qubit = { version = "0.2.0" }
tokio = { version = "1.37.0", features = ["full"] }
hyper = { version = "0.14.10", features = ["server"] }
axum = "0.6.20"
ts-rs = "8.1.0"
serde_json = "1.0.117"
serde = { version = "1.0.202", features = ["derive"] }
futures = "0.3.30"
