[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
qubit = { version = "0.7.0" }
tokio = { version = "1.38", features = ["full"] }
hyper = { version = "1.0", features = ["server"] }
axum = "0.7"
ts-rs = { version = "8.1.0", features = ["uuid-impl"] }
serde_json = "1.0.117"
serde = { version = "1.0.202", features = ["derive"] }
futures = "0.3.30"
uuid = { version = "1.8.0", features = ["serde", "v4"] }
